# DreaMS

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CLAUDE.md  GPU_TRAINING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
dreams/: api.py  cli.py
dreams/algorithms/lsh/: __init__.py  lsh.py
dreams/algorithms/murcko_hist/: __init__.py  murcko_hist.py  murcko_hist_examples.ipynb
dreams/models/baselines/: convolutional_baseline.py  deep_sets.py  feed_forward_baseline.py  random_continuous_baseline.py  random_discrete_baseline.py
dreams/models/dreams/: dreams.py
dreams/models/heads/: heads.py
dreams/models/layers/: tnq_transformer.py
dreams/training/: fine_tune.sh  pre_train.sh  smoke_test.sh  train.py  train_argparse.py
dreams/utils/: annotation.py  data.py  dformats.py  io.py  lazy.py  lcms.py  misc.py  mols.py  plots.py  spectra.py
experiments/attention_heads_analysis/: fragmentation_trees.ipynb
experiments/clustering/: clustering_evaluation.ipynb
experiments/dreams_atlas/: DreaMS_altlas_TMAP.ipynb  DreaMS_atlas_local_example.ipynb  DreaMS_atlas_stats.ipynb  compute_knn_lib_dists.py  construct_annoy.py  construct_annoy_knn.py  construct_knn.py  construct_pynndescent_knn.py  construct_pynndescent_knn_from_clusters.py  prune_knn.py
experiments/embeddings_projections/: adducts.ipynb  umap_embeddings.ipynb
experiments/fluorine_detection/: fluorine_detection.ipynb
experiments/foodomics/: foodomics.ipynb
experiments/lsh_estimations/: lsh_gems.ipynb
experiments/mol_emergence_from_ssl/: mol_emergence_from_ssl.ipynb
experiments/mol_props/: baselines.ipynb
experiments/spec_sim/: contrastive_dataset_sampling.ipynb  mol_sim_corr.ipynb  spec_retrieval.ipynb
tests/: test_api_characterization.py  test_charge_feature.py  test_construct_knn.py  test_data_characterization.py  test_heads_construction.py  test_lazy_pyopenms.py  test_murcko_histograms.py  test_spectra_characterization.py
tutorials/: atlas.ipynb  library_matching.ipynb  lsh_clustering.ipynb  murcko_hist_split.ipynb  networking.ipynb
