[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dreams"
version = "1.0.0"
description = "DreaMS (Deep Representations Empowering the Annotation of Mass Spectra)"
readme = "README.md"
license = "MIT"
authors = [{ name = "DreaMS developers" }]
requires-python = ">=3.13"
classifiers = [
    # NB: no `License ::` classifier — superseded by the SPDX `license` field above
    # under PEP 639 (setuptools>=77 rejects having both).
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

# NOTE: pins were raised from the legacy `==` freeze to the lowest floors that
# ship cp313/cp314 wheels. `>=` (not `==`) so security/compat fixes flow in;
# the reproducible build is captured separately in a lockfile (uv.lock /
# pip-compile'd requirements), not here.
dependencies = [
    "numpy>=2.1",            # NumPy 2.x — major API break vs the old 1.25 pin
    "numba>=0.63",           # 0.63 added Python 3.14 support (0.66 recommended)
    "torch>=2.9",            # first line with cp314 wheels (CPU; CUDA cp314 pending upstream)
    "pytorch-lightning>=2.4",
    "torchmetrics>=1.6",
    "pandas>=2.2.3",
    "pyarrow>=18.0",
    "h5py>=3.12",
    "rdkit>=2026.3.3",       # first release with cp314 wheels
    "umap-learn>=0.5.6",
    "scikit-learn>=1.6",     # old `<1.6` cap blocked 3.13/3.14-era builds
    "seaborn>=0.13.2",
    "plotly>=5.20.0",
    "ase>=3.22.1",
    "wandb>=0.17",
    "pandarallel>=1.6.5",
    "matchms>=0.27.0",
    "pyopenms>=3.5.0",       # 3.5 ships cp314 wheels on all OSes — kills the setup.py platform hack
    "igraph>=0.11.4",
    # molplotly removed from core: it's used only in 4 experiment notebooks (not in
    # the library or tests) and transitively requires `rdkit-pypi`, the deprecated
    # RDKit distribution that has no wheels for Python 3.13/3.14. The official
    # `rdkit` (required above) supersedes it. Notebook users who need molplotly must
    # install it manually (and are limited by its stale rdkit-pypi pin upstream).
    "fire>=0.6.0",
    "huggingface_hub>=0.33.5",
    # msml (legacy architectures) is needed only to unpickle the pretrained DreaMS
    # checkpoint, which references its classes. Pinned to our fork, which patches
    # the same matchms API drift fixed in dreams itself (upstream is unmaintained
    # at d35b34b). Immutable commit for reproducibility.
    "msml @ git+https://github.com/chemrich/dreams_legacy_architectures.git@af23d367be364a9edfd829d60e6ded6d93e2b509",
]

[project.urls]
Homepage = "https://github.com/pluskal-lab/DreaMS"
Paper = "https://www.nature.com/articles/s41587-025-02663-3"
Documentation = "https://dreams-docs.readthedocs.io/"

[project.scripts]
dreams = "dreams.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",             # replaces black (lint + format in one tool)
    "mypy>=1.11",
    "pre-commit>=3.7",
    "pytest>=8.2.1",
    "pytest-cov>=5.0.0",
    # SpectralEntropy (and its Cython build dep) removed: the library no longer
    # uses it — the only call site in dreams/utils/data.py is dead code after a
    # `raise NotImplementedError(...)`, and its upstream setup.py fails to build
    # under pip build isolation (no pyproject.toml declaring Cython/numpy).
    # Only 2 experiment notebooks still reference it; add it to a `notebooks`-style
    # extra (via a forked pyproject-fixed build) if those need to run.
]
notebooks = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.1.3",
]
docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
    "nbsphinx>=0.9.4",
    "m2r2>=0.3.3.post2",
    "mistune<0.9",            # m2r2 uses the mistune 0.8.x API (was pinned ==0.8.4)
    "lxml_html_clean>=0.2.2",
]

[tool.setuptools.packages.find]
include = ["dreams*"]

# --- uv -------------------------------------------------------------------- #
# uv is the package manager for this project (see README). `uv sync` installs
# from the committed uv.lock for byte-reproducible environments; `uv run ...`
# executes inside that env.
#
# This project targets modern Linux ONLY (it never runs on macOS). Resolution is
# pinned to Linux so the lock is single-platform and reproducible; `uv sync` will
# not work on macOS/Windows by design. For GPU/CUDA, see the `gpu-cuda` branch.
[tool.uv]
environments = ["sys_platform == 'linux'"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# PyPI's Linux torch is the multi-GB CUDA build; pull the smaller CPU build from
# PyTorch's index. (GPU training uses the cu126 index on the gpu-cuda branch.)
torch = [{ index = "pytorch-cpu" }]

[tool.ruff]
line-length = 100
target-version = "py313"
# Notebooks and one-off scripts aren't library code — linting them is noise.
# Bring them under lint in a dedicated pass later.
extend-exclude = ["experiments", "tutorials", "docs", "*.ipynb"]

[tool.ruff.lint]
# Start lenient so lint can be turned on in CI without a huge upfront cleanup;
# tighten (add "I" import-sort, "UP" pyupgrade, "B" bugbear) as the codebase is modernized.
select = ["E", "F", "W"]
# Enforced now (all mechanically fixable): F401 unused imports, F541 empty
# f-strings, W29x whitespace. Ignored below are structural/legacy-debt rules that
# need manual refactoring — tracked as Phase 2 cleanup, not day-one blockers:
ignore = [
    "E501",  # line too long
    "E402",  # import not at top — the deliberate `warnings.filterwarnings` prelude in api.py
    "E701",  # multiple statements on one line
    "E713",  # `not ... in` test
    "E721",  # type comparison with `==`
    "E741",  # ambiguous var name (e.g. `l`)
    "F403",  # `import *`
    "F405",  # name may be from `import *`
    "F811",  # redefinition (mostly wildcard-import shadowing)
    "F821",  # undefined name (ruff can't resolve wildcard-imported names)
    "F841",  # unused local variable
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: tests that download model weights or datasets (deselect with -m 'not slow')",
]

[tool.coverage.run]
source = ["dreams"]
omit = ["dreams/training/*", "experiments/*"]

[tool.mypy]
python_version = "3.13"
files = ["dreams"]
exclude = '(^|/)(experiments|tutorials|docs)/'
# Third-party deps (rdkit, numba, pyopenms, matchms, ...) ship no type stubs.
ignore_missing_imports = true
# Only report errors in the file being checked, not in untyped modules it imports.
follow_imports = "silent"
# NOTE: run mypy ISOLATED — the pre-commit hook and CI both use
# `uv tool run mypy@2.2.0`, i.e. no project deps installed. A full env
# (`uv run mypy`) makes mypy load rdkit's bundled stubs, which contain a syntax
# error it can't parse. Isolated runs rely on ignore_missing_imports and are fine.
# Gradual typing: lenient globally (no disallow_untyped_defs yet), but every module
# in the `dreams` package is now type-clean — the ignore_errors quarantine is gone.
# Keep it that way: fix new errors rather than re-adding an overrides block.
# Next step to tighten: enable disallow_untyped_defs per module.
